--- a/HallmarkCSharp/HallmarkCSharp.csproj
+++ b/HallmarkCSharp/HallmarkCSharp.csproj
@@ -4,4 +4,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
+  <ItemGroup>
+    <Folder Include="CakeCS24" />
+  </ItemGroup>
 </Project>
